<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:fillViewport="true"
    android:scrollbars="none"
    android:background="@drawable/all_bg"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:src="@drawable/moodify_tag"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/sad" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:autofillHints="Email" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:autofillHints="password" />

        <Button
            android:id="@+id/buttonSignin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:background="@drawable/ripple_login_button"
            android:text="@string/login_text" />

        <TextView
            android:text="@string/not_have_account"
            android:id="@+id/textViewSignUp"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:textColor="#000000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </RelativeLayout>
</ScrollView>
